@@ -582,7 +582,7 @@ civic_distributism = {
 
 
 
-civic_martial_brotherhood = {
+civic_patriotic_service = {
 
 	potential = {
 		ethics = { NOT = {  value = ethic_gestalt_consciousness } }
@@ -2457,7 +2457,6 @@ civic_nationalistic_zeal = {
 		country_war_exhaustion_mult = -0.25
 		country_claim_influence_cost_mult = -0.25
 		country_subject_acceptance_add = 50
-		subject_tribute_mult = 0.25
 		country_occupation_armies_add = 4
 		country_border_friction_mult = 0.33
 
