@@ -72,5 +72,7 @@
 23/06/2020 - Hippo
 -Private Education policy nerfed to +5% specialist output from +10%
 -Public Education policy nerfed to -10 crime from -25
+-Renamed Martial Brotherhood -> Patriotic Service
+-Nationalistic Zeal nerfed removed subject tax increase
 
 
